# CMVerify

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/cmverify/: __init__.py  annotation.py  core.py  models.py  utils.py  viz.py
src/cmverify/models/: AIFI_rf_best_estimator.pkl  AIFI_rf_model.pkl  ref_pbmc_clean_celltypist_model_AIFI_L3_2024-04-19.pkl  ref_pbmc_clean_celltypist_model_AIFI_L3_2024-04-19_jl.pkl  rf_scaler.pkl
tests/: __init__.py  test_core.py  test_utils.py
