[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CMVerify"
version = "0.0.1"
description = "CMV serostatus predictor"
authors = [{ name = "Luke Trinity", email = "luke.trinity@jax.org" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "scanpy",
    "scikit-learn",
    "matplotlib"
]


[tool.setuptools.packages.find]
where = ["src"]
