[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CMVerify_LukeTrinity"
version = "0.0.1"
description = "CMV serostatus predictor"
authors = [{ name = "Luke Trinity", email = "luke.trinity@jax.org" }]
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "scanpy",
    "matplotlib",
    "anndata",
    "celltypist",
    "ipython",
    "joblib",
    "numpy",
    "pandas",
    "seaborn"
]
[project.urls]
Homepage = "https://ucarlab.github.io/"

[tool.setuptools.packages.find]
where = ["src"]
